# AAMMR

./: .gitignore  Drawer_Code.ino  README.md  UV-C_Code.ino  frames_2026-04-14_16.19.04.gv  frames_2026-04-21_13.41.42.gv
src/amr_robot/: package.xml  setup.py
src/amr_robot/amr_robot/: arduino_bridge.py
src/amr_robot/amr_robot/robot/: robot.ino
src/amr_robot/config/: nav2.rviz  nav2_params.yaml  slam_config.yaml
src/amr_robot/launch/: mapping.launch.py  nav2.launch.py  nav2_Entrance.launch.py
src/amr_robot/maps/: Entrance.pgm  Entrance.yaml  Synaptic_Cosmetics_Office1.pgm  Synaptic_Cosmetics_Office1.yaml  my_map.pgm  my_map.yaml
