<?xml version="1.0"?>
<package format="3">
  <name>amr_robot</name>
  <version>0.2.0</version>
  <description>AMR — LD19 LiDAR + JGY-370 encoders + BTS7960 + SLAM + Nav2</description>
  <maintainer email="wahdan@robot.local">wahdan</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
